♻️ refactor(api): MVP APIの責務分割を改善
